<resources>
    <string name="app_name">Dantion</string>

    <string name="cd_onboarding_1">onboarding Ilustrasi deteksi bahaya</string>
    <string name="cd_onboarding_2">onboarding Ilustrasi kejahatan</string>
    <string name="cd_onboarding_3">onboarding Ilustrasi kecelakaan</string>
    <string name="cd_onboarding_4">onboarding Ilustrasi kebakaran</string>

    <string name="cd_indicator_1_active">indikator onboarding  1 aktif</string>
    <string name="cd_indicator_2_active">indikator onboarding  2 aktif</string>
    <string name="cd_indicator_3_active">indikator onboarding  3 aktif</string>
    <string name="cd_indicator_4_active">indikator onboarding  4 aktif</string>
    <string name="cd_indicator_1_disable">indikator onboarding  1 tidak aktif</string>
    <string name="cd_indicator_2_disable">indikator onboarding  2 tidak aktif</string>
    <string name="cd_indicator_3_disable">indikator onboarding  3 tidak aktif</string>
    <string name="cd_indicator_4_disable">indikator onboarding  4 tidak aktif</string>

    <string name="onboarding_titles_1">Deteksi Bahaya</string>
    <string name="onboarding_desc_1">Dantion merupakan aplikasi cepat tanggap yang dapat mendeteksi situasi darurat (kejahatan, kecelakaan, atau kebakaran) melalui rekaman suara dan melaporkan lokasi kejadian ke pihak berwenang secara otomatis.</string>
    <string name="onboarding_titles_2">Cara Melaporkan Kejahatan</string>
    <string name="onboarding_desc_2">Tekan tombol darurat lalu ucapkan kalimat pertolongan yang mengandung kata “begal”, “maling”, “rampok”, atau “pencuri”.</string>
    <string name="onboarding_titles_3">Cara Melaporkan Kecelakaan</string>
    <string name="onboarding_desc_3">Tekan tombol darurat lalu ucapkan kalimat pertolongan yang mengandung kata “tabrakan” atau “kecelakaan”.</string>
    <string name="onboarding_titles_4">Cara Melaporkan Kebakaran</string>
    <string name="onboarding_desc_4">Tekan tombol darurat lalu ucapkan kalimat pertolongan yang mengandung kata “kebakaran”.</string>

    <string name="skip">Lewati</string>
    <string name="next">Selanjutnya</string>
    <string name="start">Mulai</string>

    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="email">Email</string>
    <string name="failed_upload_message">Upload Gagal, Mohon Ulangi</string>
    <string name="full_name">Hai, %1$s</string>
    <string name="password">Kata Sandi</string>
    <string name="address">Alamat</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="number">Nomor Ponsel</string>
    <string name="parentNumber">Nomor yang Dapat Dihubungi</string>
    <string name="individual_data">Data Diri</string>
    <string name="account_data">Informasi Akun</string>
    <string name="placeholder_name">Masukkan nama lengkap anda</string>
    <string name="placeholder_address">Masukkan alamat anda</string>
    <string name="placeholder_pw">Masukkan kata sandi anda</string>
    <string name="placeholder_confirm_pw">Masukkan ulang kata sandi anda</string>
    <string name="placeholder_email">Masukkan email anda</string>
    <string name="placeholder_number">8xxxxxxxxxx</string>
    <string name="no_account">Belum punya akun? </string>
    <string name="have_account">Sudah punya akun? </string>
    <string name="cd_logo">Logo Dantion</string>
    <string name="cd_notification">Notifikasi</string>


    <string name="welcome">Selamat Datang, %1$s</string>
    <string name="cd_photo_profile">Foto Profil</string>
    <string name="cd_photo_acc">Ilustrasi Kecelakaan</string>
    <string name="cd_photo_rob">Ilustrasi Begal</string>
    <string name="horn">Klakson</string>
    <string name="how_to_use">Penggunaan Tombol Darurat</string>
    <string name="listen_pattern">Dengar\nPola</string>
    <string name="sound_record">Rekam\nSuara</string>
    <string name="danger_stat">Statistik Bahaya</string>
    <string name="danger_stat_sub">Jumlah kejahatan, kecelakaan &amp; kebakaran yang terdeteksi</string>
    <string name="rob">Begal</string>
    <string name="all">Semua</string>
    <string name="crime">Kejahatan</string>
    <string name="accident">Kecelakaan</string>
    <string name="fire">Kebakaran</string>
    <string name="stat_number">28.0000</string>
    <string name="case_detected">Kasus</string>
    <string name="emergency_button">Tombol Darurat</string>
    <string name="latest_case">Kasus Terkini</string>
    <string name="date">28 Mei 2022</string>
    <string name="location_unknown">Lokasi Tidak Diketahui</string>
    <string name="victim_name">Nama Korban</string>
    <string name="victim">Korban</string>
    <string name="reporter">Pelapor</string>
    <string name="occurance_time">20:00</string>

    <string name="home">Beranda</string>
    <string name="location">Lokasi</string>
    <string name="location_not_found">Lokasi Tidak Ditemukan</string>
    <string name="account">Akun</string>

    <string name="password_same">Patikan password yang anda masukkan sesuai</string>
    <string name="register_success">Registrasi Berhasil</string>
    <string name="register_success_congrate">Selamat, akunmu telah terdaftar!</string>

    <string name="empty_personal_data">Harap isi semua data pribadi, sebelum ke tahap selanjutnya</string>
    <string name="email_incorrect">Email belum sesuai</string>
    <string name="password_less_6">Password kurang dari 6 karakter</string>
    <string name="number_less_10">Nomor belum sesuai</string>
    <string name="empty_form">Data tidak boleh kosong</string>
    <string name="empty_information_account">Harap isi semua informasi akun</string>
    <string name="see_all">Lihat Semua</string>
    <string name="see_record_file">Dengar Rekaman</string>
    <string name="time_record">%1$d%2$d:%3$d%4$d</string>
    <string name="stop_record">Batalkan</string>
    <string name="button_hold_time">Tekan tombol selama 1 detik</string>
    <string name="prediction_label">Prediction Label</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detection_info_time">%1$s | %2$s | Jam %3$s</string>

    <string name="how_to_report_danger_title">Cara Melaporkan Bahaya</string>
    <string name="how_to_report_danger">
<li> Tekan tombol rekam</li>\n
<li> Ucapkan kalimat pertolongan yang mengandung salah satu kata pada bagian jenis bahaya</li>\n
<li> Rekaman akan otomatis terkirim pada detik ke-5</li>
    </string>
    <string name="warning_content">
        Menggunakan tombol darurat akan mengirim rekaman suara &amp; lokasi Anda ke pihak berwajib (Polisi/Pemadam Kebakaran/Tenaga Medis)
    </string>
    <string name="warning">PERHATIAN!</string>

    <string name="detection_type">Jenis Bahaya</string>
    <string name="detection_type_1">Kata Kejahatan</string>
    <string name="detection_type_1_content">
<li> Begal</li>\n
<li> Maling</li>\n
<li> Rampok</li>\n
<li> Pencuri</li></string>

    <string name="detection_type_2">Kata Kecelakaan</string>
    <string name="detection_type_2_content">
<li> Tabrakan</li>\n
<li> Kecelakaan</li></string>

    <string name="detection_type_3">Kata Kebakaran</string>
    <string name="detection_type_3_content"><li> Kebakaran</li></string>
    <string name="detection_status">Tervalidasi</string>
    <string name="detection_status_done">Selesai</string>

    <string name="notification_status_invalid">Menunggu Validasi %1$s</string>
    <string name="notification_status_valid">%1$s dalam perjalanan</string>
    <string name="notification_status_selesai">Kasus telah diselesaikan</string>
    <string name="notification_status_ditolak">>%1$s menolak laporan anda</string>
    <string name="notification_unread">1</string>

    <string name="navigate_to_location">Arahkan ke lokasi</string>
    <string name="accident_location">Lokasi Kejadian</string>
    <string name="date_time">Tanggal dan Waktu</string>
    <string name="accident_time">20:08</string>

    <string name="logout">Keluar</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="about_app">Tentang Aplikasi</string>
    <string name="password_old">Kata Sandi Lama</string>
    <string name="password_new">Kata Sandi Baru</string>
    <string name="password_new_confirm">Konfirmasi Kata Sandi Baru</string>
    <string name="placeholder_pass_old">Masukkan kata sandi lama</string>
    <string name="placeholder_pass_new">Masukkan kata sandi baru</string>
    <string name="placeholder_confirm_pass_new">Masukkan ulang kata sandi baru</string>
    <string name="save">Simpan</string>
    <string name="danger_detail_title">Detail Bahaya</string>

    <string name="heading_notif_report">Laporan Anda Hari Ini</string>
    <string name="heading_notif_accident">Kejadian Hari Ini</string>

    <string name="validation">Validasi</string>
    <string name="rejection">Tolak</string>
    <string name="complete">Selesai</string>
    <string name="validator">Validator</string>

    <string name="heading_tutorial">Penggunaan Tombol Darurat</string>
    <string name="heading_report">Laporan Terkini</string>
    <string name="heading_report_all">Lihat Semua</string>

    <string name="status_invalid">Belum Valid</string>
    <string name="status_reject">Ditolak</string>
    <string name="status_valid">Tervalidasi</string>

    <string name="read_already">Tandai sudah dibaca</string>
    <string name="report_time">x menit yang lalu</string>
    <string name="data_not_found">Data Tidak Ditemukan</string>
    <string name="name">Nama</string>
    <string name="distance_value">2 km</string>
    <string name="time_prediction">10 Menit</string>
    <string name="time_prediction_duration">Perkiraan durasi</string>
    <string name="distance">Jarak</string>
    <string name="from_your_location">dari lokasimu ke TKP</string>
    <string name="authority_status">Tenaga medis dalam perjalanan</string>

    <string name="MAPS_ID">c35b3d2d9f3549d5</string>
    <string name="success_record">Laporan %1$s Berhasil Terkirim</string>
    <string name="success_record_subtitle">Rekaman yang baru anda buat berhasil dikirimkan ke pihak berwajib, Harap menunggu proses validasi</string>
    <string name="see_report">Lihat Laporan</string>
    <string name="choose_location">Choose Location</string>
    <string name="loading_reduce_message">Sedang memperkecil ukuran gambar, Tunggu sebentar…</string>
    <string name="success_reduce_message">Berhasil memperkecil ukuran gambar</string>
    <string name="report_not_found">Tidak Ada Laporan</string>


</resources>