<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.screens.FirstRegisterFragment">

    <TextView
        android:id="@+id/tv_register"
        style="@style/HeadingCenter"
        android:text="@string/register"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/tab_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <Button
            android:id="@+id/tab_personal_data"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            style="@style/ButtonFullWidth"
            android:padding="5dp"
            android:textSize="12sp"
            android:background="@drawable/rounded_primary_light_full"
            android:text="@string/individual_data"
            />

        <Button
            android:id="@+id/tab_account_info"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            style="@style/ButtonFullWidth"
            android:padding="5dp"
            android:textSize="12sp"
            android:background="@drawable/rounded_outline_primary_light_full"
            android:text="@string/account_data"
            android:textColor="@color/primary_light_full"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_name"
        style="@style/LabelEditText"
        android:layout_marginTop="20dp"
        android:text="@string/full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_register"/>

    <EditText
        android:id="@+id/et_name"
        style="@style/CustomEditText"
        android:hint="@string/placeholder_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_address"
        style="@style/LabelEditText"
        android:text="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <EditText
        android:id="@+id/et_address"
        style="@style/CustomEditText"
        android:hint="@string/placeholder_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

    <TextView
        android:id="@+id/tv_number"
        style="@style/LabelEditText"
        android:text="@string/number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_address" />

    <EditText
        android:id="@+id/et_number"
        style="@style/CustomEditText"
        android:inputType="number"
        android:hint="@string/placeholder_number"
        android:drawableStart="@drawable/ic_code_number"
        android:padding="10dp"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_number" />

    <TextView
        android:id="@+id/tv_parent_number"
        style="@style/LabelEditText"
        android:text="@string/parentNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_number" />

    <EditText
        android:id="@+id/et_parent_number"
        style="@style/CustomEditText"
        android:inputType="number"
        android:hint="@string/placeholder_number"
        android:drawableStart="@drawable/ic_code_number"
        android:padding="10dp"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_parent_number" />

    <Button
        android:id="@+id/btn_next"
        style="@style/ButtonFullWidth"
        android:text="@string/next"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_parent_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_no_acc"
        style="@style/TextViewAskAccount"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/have_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_next" />

    <TextView
        android:id="@+id/tv_login"
        style="@style/TextViewAskAccount"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login"
        android:textColor="@color/primary_main"
        app:layout_constraintBottom_toBottomOf="@id/tv_no_acc"
        app:layout_constraintStart_toEndOf="@+id/tv_no_acc"
        app:layout_constraintTop_toTopOf="@+id/tv_no_acc" />
</androidx.constraintlayout.widget.ConstraintLayout>