<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.screens.SecondOnboardingFragment"
    android:background="@color/onboarding_2"
    >

    <ImageView
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/cd_onboarding_2"
        android:layout_gravity="center"
        android:src="@drawable/img_crime" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        style="@style/OnBoardingDescBG">

        <ImageView
            android:id="@+id/iv_indicator_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/onboarding_disable_indicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cd_indicator_1_disable"/>

        <ImageView
            android:id="@+id/iv_indicator_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:src="@drawable/onboarding_active_indicator"
            app:layout_constraintStart_toEndOf="@id/iv_indicator_1"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cd_indicator_2_active"/>

        <ImageView
            android:id="@+id/iv_indicator_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:src="@drawable/onboarding_disable_indicator"
            app:layout_constraintStart_toEndOf="@id/iv_indicator_2"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cd_indicator_3_disable"/>

        <ImageView
            android:id="@+id/iv_indicator_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:src="@drawable/onboarding_disable_indicator"
            app:layout_constraintStart_toEndOf="@id/iv_indicator_3"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cd_indicator_4_disable"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/onboarding_titles_2"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_indicator_1" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/onboarding_desc_2"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semi"
            android:text="@string/skip"
            android:textColor="@color/primary_second"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_next"
            app:layout_constraintEnd_toStartOf="@+id/btn_next"
            app:layout_constraintStart_toStartOf="@+id/tv_desc"
            app:layout_constraintTop_toTopOf="@+id/btn_next" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_primary_second"
            android:padding="20dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc"
            android:contentDescription="@string/next"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>