<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustResize"
    tools:context=".ui.auth.register.screens.CrimeCaseFragment">

    <TextView
        android:id="@+id/tv_register"
        style="@style/HeadingCenter"
        android:paddingBottom="20dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/tab_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register">

        <Button
            android:id="@+id/tab_personal_data"
            style="@style/ButtonFullWidth"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_outline_primary_light_full"
            android:padding="5dp"
            android:text="@string/individual_data"
            android:textColor="@color/primary_light_full"
            android:textSize="12sp" />

        <Button
            android:id="@+id/tab_account_info"
            style="@style/ButtonFullWidth"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_primary_light_full"
            android:padding="5dp"
            android:text="@string/account_data"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_email"
        style="@style/LabelEditText"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_register" />

    <com.bangkit.dantion.ui.custom.CustomTextInputLayout
        android:id="@+id/et_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            style="@style/CustomEditText"
            android:hint="@string/placeholder_email"
            android:inputType="textEmailAddress" />
    </com.bangkit.dantion.ui.custom.CustomTextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        style="@style/LabelEditText"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email_layout" />

    <com.bangkit.dantion.ui.custom.CustomTextInputLayout
        android:id="@+id/et_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            style="@style/CustomEditText"
            android:hint="@string/placeholder_pw"
            android:inputType="textPassword" />
    </com.bangkit.dantion.ui.custom.CustomTextInputLayout>

    <TextView
        android:id="@+id/tv_confirm_password"
        style="@style/LabelEditText"
        android:text="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password_layout" />

    <com.bangkit.dantion.ui.custom.CustomTextInputLayout
        android:id="@+id/et_confirm_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            style="@style/CustomEditText"
            android:hint="@string/placeholder_confirm_pw"
            android:inputType="textPassword" />
    </com.bangkit.dantion.ui.custom.CustomTextInputLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/ButtonFullWidth"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirm_password_layout" />

    <TextView
        android:id="@+id/tv_no_acc"
        style="@style/TextViewAskAccount"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/have_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <TextView
        android:id="@+id/tv_login"
        style="@style/TextViewAskAccount"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login"
        android:textColor="@color/primary_main"
        app:layout_constraintBottom_toBottomOf="@id/tv_no_acc"
        app:layout_constraintStart_toEndOf="@+id/tv_no_acc"
        app:layout_constraintTop_toTopOf="@+id/tv_no_acc" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded_white"
        app:layout_constraintBottom_toBottomOf="@+id/et_confirm_password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_email" />
</androidx.constraintlayout.widget.ConstraintLayout>